Added sanitized string

--- a/src/main/resources/com/example/week4strings/string-view.fxml
+++ b/src/main/resources/com/example/week4strings/string-view.fxml
@@ -18,6 +18,7 @@
                </children>
             </HBox>
             <Label fx:id="resultLabel" text="Label" />
+            <Label fx:id="noSpaceLabel" text="Label" />
          </children>
       </VBox>
    </children>
